se corrigen errores en la auth y se finalizan servicios